Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/neg/ParamCast.out
ParamCast.java:15:36: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: A<java.lang.String>, B<?,java.lang.Integer>)
1 error
